# jojo-listen

./: .gitignore  package.json  pnpm-lock.yaml  tsconfig.node.json  vitest.config.ts
.sisyphus/: boulder.json
.sisyphus/notepads/jojo-listen-desktop/: learnings.md
.sisyphus/plans/: jojo-listen-desktop.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: commands.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/llm/: mod.rs  types.rs
src/__tests__/: edge-cases.test.tsx  integration.test.tsx  setup.test.tsx
src/components/: AnalysisCard.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  SettingsPanel.tsx  StealthMode.tsx  SubtitleRenderer.tsx  Toast.tsx  VideoDemo.tsx  VideoPlayer.tsx
src/components/__tests__/: AnalysisCard.test.tsx  SettingsPanel.test.tsx  StealthMode.test.tsx  SubtitleRenderer.test.tsx  Toast.test.tsx  VideoPlayer.test.tsx
src/hooks/: useABLoop.ts  useKeyboardShortcuts.ts  usePlaybackRate.ts  useProgress.ts  useSubtitleAnalysis.ts  useVideoSync.ts
src/hooks/__tests__/: useABLoop.test.ts  useKeyboardShortcuts.test.ts  usePlaybackRate.test.ts  useProgress.test.ts  useSubtitleAnalysis.test.ts  useVideoSync.test.ts
src/lib/llm/: api.ts  index.ts  types.ts
src/lib/llm/__tests__/: api.test.ts
src/lib/player/: index.ts  video.ts
src/lib/stealth/: index.ts
src/lib/storage/: index.ts
src/lib/subtitle/: index.ts  parser.ts  segmenter.ts  types.ts
src/theme/: ThemeProvider.tsx  index.ts  tokens.ts
(+6 files in other folders)
