[package]
name = "jojo-listen"
version = "0.1.0"
description = "A Tauri App for listening with LLM subtitles"
authors = ["you"]
edition = "2021"

[lib]
name = "jojo_listen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = "2"
tauri-plugin-keychain = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
